--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
     pull_request:
 
 jobs:
-    python-quality-checks:
+    quality-checks:
         runs-on: ubuntu
         steps:
             - uses: actions/checkout@v3
@@ -29,37 +29,37 @@ jobs:
               run: |
                   just check
 
-        python-unit-tests:
-            runs-on: ${{ matrix.os }}
-            strategy:
-                fail-fast: false
-                matrix:
-                    python: [ 3.8, 3.9, "3.10", "3.11" ]
-                    os: [ ubuntu-latest, macos-latest, windows-latest ]
-            defaults:
-                run:
-                    shell: bash
+    unit-tests:
+        runs-on: ${{ matrix.os }}
+        strategy:
+            fail-fast: false
+            matrix:
+                python: [ 3.8, 3.9, "3.10", "3.11" ]
+                os: [ ubuntu-latest, macos-latest, windows-latest ]
+        defaults:
+            run:
+                shell: bash
 
-            steps:
-                - uses: actions/checkout@v3
+        steps:
+            - uses: actions/checkout@v3
 
-                - name: Set up Python v${{ matrix.python }}
-                  uses: actions/setup-python@v4
-                  with:
-                      python-version: ${{ matrix.python }}
+            - name: Set up Python v${{ matrix.python }}
+              uses: actions/setup-python@v4
+              with:
+                  python-version: ${{ matrix.python }}
 
-                - name: Install and configure Poetry
-                  uses: snok/install-poetry@v1
-                  with:
-                      version: 1.6.1
-                      virtualenvs-create: true
-                      virtualenvs-in-project: true
+            - name: Install and configure Poetry
+              uses: snok/install-poetry@v1
+              with:
+                  version: 1.6.1
+                  virtualenvs-create: true
+                  virtualenvs-in-project: true
 
-                - name: Install Python dependencies
-                  run: |
-                      just poetry-install
+            - name: Install Python dependencies
+              run: |
+                  just poetry-install
 
-                - name: Run unit-tests
-                  run: |
-                      source $VENV  # see https://github.com/snok/install-poetry#running-on-windows
-                      just unit-tests
+            - name: Run unit-tests
+              run: |
+                  source $VENV  # see https://github.com/snok/install-poetry#running-on-windows
+                  just unit-tests
