--- a/.github/workflows/pr-linting.yml
+++ b/.github/workflows/pr-linting.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: amannn/action-semantic-pull-request@v5.1.0
         with:
           requireScope: false
-          scopes: |
+          allowedScopes: |
             \#[0-9]+
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
