--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
     quality-checks:
-        runs-on: ubuntu
+        runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
 
