--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,6 +74,14 @@ ignore = [
 "vistafetch/client.py" = ["I001"]
 "vistafetch/model/asset/__init__.py" = ["I001"]
 
+[tool.semantic_release]
+version_variable = [
+    "src_folder/__init__.py:__version__",
+    "pyproject.toml:version"
+]
+branch = "main"
+build_command = "pip install poetry==1.6.1 && poetry build"
+
 
 [build-system]
 requires = ["poetry-core"]
