--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     concurrency: release
     permissions:
+      contents: write
       id-token: write
+      packages: write
 
     steps:
       - uses: actions/checkout@v3
