--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,7 @@ jobs:
     concurrency: release
     permissions:
       contents: write
+      deployments: write
       id-token: write
       packages: write
 
