--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,6 @@
-name: Semantic Release
+name: Release
 
-on:
-  push:
-    branches:
-      - main
+on: workflow_dispatch
 
 jobs:
   release:
@@ -20,21 +17,42 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Python Semantic Release
-        id: release
-        uses: python-semantic-release/python-semantic-release@v8.0.0
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.8
+
+      - name: Install and configure Poetry
+        uses: snok/install-poetry@v1
+        with:
+          version: 1.6.1
+          in-project: true
+          prefer-active-python: true
+
+      - name: Calculate Semantic Version
+        uses: registry.gitlab.com/juhani/go-semrel-gitlab:v0.21.1
+        env:
+          GSG_PATCH_COMMIT_TYPES: "fix,refactor,test,ci,revert"  # see explanations: https://github.com/commitizen/conventional-commit-types/blob/master/index.json
+          GSG_MINOR_COMMIT_TYPES: "feat"
+          GSG_INITIAL_DEVELOPMENT: true
+          GSG_BUMP_PATCH: true
+        run:
+          - release next-version > .next-version
+          - cat .next-version
+
+      - name: Build Library Wheel
+        run: |
+          poetry version $(cat .next_version)
+          poetry build
+          twine check --strict dist/*
 
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
-        # NOTE: DO NOT wrap the conditional in ${{ }} as it will always evaluate to true.
-        # See https://github.com/actions/runner/issues/1173
-        if: steps.release.outputs.released == 'true'
         with:
           user: __token__
           password: ${{ secrets.PYPI_TOKEN }}
 
       - name: Publish package distributions to GitHub Releases
         uses: python-semantic-release/upload-to-gh-release@main
-        if: steps.release.outputs.released == 'true'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
