--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,16 +9,13 @@ jobs:
   release:
     runs-on: ubuntu-latest
     concurrency: release
-    permissions:
-      contents: write
-      deployments: write
-      id-token: write
-      packages: write
 
     steps:
-      - uses: actions/checkout@v3
+      # the checkout action persists the passed credentials by default
+      # subsequent git commands will pick them up automatically
+      - uses: actions/checkout@v2
         with:
-          fetch-depth: 0
+          token: ${{secrets.PAT}}
 
       - name: Python Semantic Release
         id: release
@@ -26,15 +23,11 @@ jobs:
 
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
-        # NOTE: DO NOT wrap the conditional in ${{ }} as it will always evaluate to true.
-        # See https://github.com/actions/runner/issues/1173
-        if: steps.release.outputs.released == 'true'
         with:
           user: __token__
           password: ${{ secrets.PYPI_TOKEN }}
 
       - name: Publish package distributions to GitHub Releases
         uses: python-semantic-release/upload-to-gh-release@main
-        if: steps.release.outputs.released == 'true'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
