work with a PAT

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,10 +75,7 @@ ignore = [
 "vistafetch/model/asset/__init__.py" = ["I001"]
 
 [tool.semantic_release]
-version_variable = [
-    "src_folder/__init__.py:__version__",
-    "pyproject.toml:version"
-]
+version_toml = ["pyproject.toml:tool.poetry.version"]
 branch = "main"
 build_command = "pip install poetry==1.6.1 && poetry build"
 
