--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,10 @@ jobs:
         with:
           token: ${{secrets.PAT}}
 
+      - name: Adapt git config
+        run: |
+          git config --global --add safe.directory *
+
       # This action uses Python Semantic Release v8
       - name: Python Semantic Release
         id: release
