ci: simplify tag name
Signed-off-by: bossenti <bossenti@posteo.de>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Release
 on:
   push:
     tags:
-      - "v*"
+      - "*.*.*"
 
 jobs:
   release:
@@ -35,8 +35,7 @@ jobs:
 
       - name: Bump package version and push change
         run: |
-          export TAG_NAME=${GITHUB_REF#refs/*/}
-          poetry version "${$(echo $TAG_NAME):1}"
+          poetry version ${GITHUB_REF#refs/*/}
           git add pyproject.toml
           git commit -m "Bump version to ${GITHUB_REF#refs/*/} [skip ci]"
           git push origin develop
