ci: add twine as release dependency
Signed-off-by: bossenti <bossenti@posteo.de>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          poetry install --with dev --all-extras
+          poetry install --with dev,release --all-extras
 
       - name: Set Package Version
         run: |
