--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Build package
         run: |
           poetry build
-          twine check --strict dist/*
+          poetry twine check --strict dist/*
 
       - name: Publish package
         uses: pypa/gh-action-pypi-publish@release/v1
