ci: adapt dependabot config
Signed-off-by: bossenti <bossenti@posteo.de>

--- a/.github/workflows/pr-linting.yml
+++ b/.github/workflows/pr-linting.yml
@@ -27,6 +27,7 @@ jobs:
             refactor
             perf
             test
+            deps
             (deps)
             (deps-dev)
             ci
