--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,11 +14,11 @@ repos:
   - repo: local
     hooks:
 
-      - id: black
-        name: black
+      - id: format
+        name: format
         language: python
         types: [ python ]
-        entry: black
+        entry: ruff format
         verbose: true
 
       - id: mypy
