--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
             - name: Set up Python
               uses: actions/setup-python@v5
               with:
-                  python-version: 3.8
+                  python-version: 3.9
 
             - name: Install and configure Poetry
               uses: snok/install-poetry@v1
@@ -37,7 +37,7 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                python: [ 3.8, 3.9, "3.10", "3.11", "3.12" ]
+                python: [3.9, "3.10", "3.11", "3.12" ]
                 os: [ ubuntu-latest, macos-latest, windows-latest ]
         defaults:
             run:
