--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,4 @@
-[tool.autoflake]
-expand-star-imports = true
-in-place = true
-remove-all-unused-imports = true
-remove-duplicate-keys = true
-remove-unused-variables = true
-
-[tool.poetry]
+[project]
 name = "vistafetch"
 version = "0.0.0"
 description = "Small & simple library to fetch financial data for stocks, ETFs, funds, etc. from Onvista."
@@ -41,45 +34,44 @@ include = [
     { path = "vistafetch/py.typed" }
 ]
 
-[tool.poetry.dependencies]
-python = ">=3.9, <3.13"
-pydantic = ">=2.0.0"
-requests = ">=2.31.0"
-rich = ">=13.0.0"
+requires-python = ">=3.9, <3.13"
+dependencies = [
+    "pydantic>=2.0.0",
+    "requests>=2.31.0",
+    "rich>=13.0.0",
+]
 
-[tool.poetry.group.dev]
-optional = true
+[dependency-groups]
+dev = [
+    "autoflake==2.3.1",
+    "mypy==1.14.0",
+    "pre-commit==3.5.0",
+    "pytest-cov==5.0.0",
+    "pytest==8.3.4",
+    "ruff==0.8.4",
+    "types-requests==2.32.0.20241016",
+]
+release = [
+    "twine==6.0.1",
+]
 
-[tool.poetry.group.dev.dependencies]
-autoflake = "2.3.1"
-mypy = "1.14.0"
-pre-commit = "3.5.0"
-pytest = "8.3.4"
-pytest-cov = "5.0.0"
-ruff = "0.8.4"
-types-requests = "2.32.0.20241016"
-
-[tool.poetry.group.release]
-optional = true
-
-[tool.poetry.group.release.dependencies]
-twine = "6.0.1"
+[tool.autoflake]
+expand-star-imports = true
+in-place = true
+remove-all-unused-imports = true
+remove-duplicate-keys = true
+remove-unused-variables = true
 
 [tool.ruff]
-select = ["C90", "D", "E", "F", "I", "ICN", "N", "PL", "UP"]
-ignore = [
+lint.select = ["C90", "D", "E", "F", "I", "ICN", "N", "PL", "UP"]
+lint.ignore = [
     "D107",
     "D203", # ignore in favour of D211
     "D213", # ignore in favour of D212
 ]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "tests/**/*" = ["D100","D101", "D102", "D103", "D104"]
 "tests/test_client.py" = ["I001"]
 "vistafetch/client.py" = ["I001"]
 "vistafetch/model/asset/__init__.py" = ["I001"]
-
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
