--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,24 +9,18 @@ jobs:
         steps:
             - uses: actions/checkout@v4
 
-            - name: Set up Python
-              uses: actions/setup-python@v5
+            - name: Install uv
+              uses: astral-sh/setup-uv@v5
               with:
-                  python-version: 3.9
-
-            - name: Install and configure Poetry
-              uses: snok/install-poetry@v1
-              with:
-                  version: 1.6.1
-                  in-project: true
-                  prefer-active-python: true
+                version: "0.5.13"
+                python-version: 3.9
 
             - name: Install command runner
               uses: taiki-e/install-action@just
 
             - name: Install Python dependencies
               run: |
-                  just poetry-install
+                  just install-deps
 
             - name: Run style & code checks
               run: |
@@ -46,26 +40,19 @@ jobs:
         steps:
             - uses: actions/checkout@v4
 
-            - name: Set up Python v${{ matrix.python }}
-              uses: actions/setup-python@v5
+            - name: Install uv
+              uses: astral-sh/setup-uv@v5
               with:
-                  python-version: ${{ matrix.python }}
-
-            - name: Install and configure Poetry
-              uses: snok/install-poetry@v1
-              with:
-                  version: 1.6.1
-                  virtualenvs-create: true
-                  virtualenvs-in-project: true
+                version: "0.5.13"
+                python-version: ${{ matrix.python }}
 
             - name: Install command runner
               uses: taiki-e/install-action@just
 
             - name: Install Python dependencies
               run: |
-                  just poetry-install
+                  just install-deps
 
             - name: Run unit-tests
               run: |
-                  source $VENV  # see https://github.com/snok/install-poetry#running-on-windows
                   just unit-tests
