--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "vistafetch"
 version = "0.0.0"
 description = "Small & simple library to fetch financial data for stocks, ETFs, funds, etc. from Onvista."
 authors = ["bossenti <bossenti@apache.org>"]
-license = "Apache 2.0"
+license.text = "Apache 2.0"
 readme = "README.md"
 
 repository = "https://github.com/bossenti/vistafetch"
