--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,12 @@ dependencies = [
     "rich>=13.0.0",
 ]
 
+[project.urls]
+homepage = "https://github.com/bossenti/vistafetch"
+documentation = "https://github.com/bossenti/vistafetch/blob/main/README.md"
+repository = "https://github.com/bossenti/vistafetch"
+changelog = "https://github.com/bossenti/vistafetch/releases"
+
 [dependency-groups]
 dev = [
     "autoflake==2.3.1",
