--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,4 +1,5 @@
 version: 2
+enable-beta-ecosystems: true
 updates:
   - package-ecosystem: "github-actions"
     directory: "/"
@@ -10,7 +11,7 @@ updates:
     commit-message:
       prefix: "deps: "
 
-  - package-ecosystem: "pip"
+  - package-ecosystem: "uv"
     directory: "/"
     labels:
       - "dependencies"
