--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,8 +15,8 @@ jobs:
             - name: Install uv
               uses: astral-sh/setup-uv@v7
               with:
-                version: "0.7.2"
-                python-version: 3.9
+                version: "0.9.7"
+                python-version: 3.10
 
             - name: Install command runner
               uses: taiki-e/install-action@just
@@ -34,7 +34,7 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                python: [3.9, "3.10", "3.11", "3.12", "3.13" ]
+                python: ["3.10", "3.11", "3.12", "3.13", "3.14" ]
                 os: [ ubuntu-latest, macos-latest, windows-latest ]
         defaults:
             run:
@@ -46,7 +46,7 @@ jobs:
             - name: Install uv
               uses: astral-sh/setup-uv@v7
               with:
-                version: "0.7.2"
+                version: "0.9.7"
                 python-version: ${{ matrix.python }}
 
             - name: Install command runner
