--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
               uses: astral-sh/setup-uv@v7
               with:
                 version: "0.9.7"
-                python-version: 3.10
+                python-version: "3.10"
 
             - name: Install command runner
               uses: taiki-e/install-action@just
