--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
         uses: astral-sh/setup-uv@v7
         with:
           version: "0.9.7"
-          python-version: 3.10
+          python-version: "3.10"
 
       - name: Configure Git
         run: |
