--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,12 +11,12 @@ jobs:
     concurrency: release
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3  # v6
 
       - name: Install uv
-        uses: astral-sh/setup-uv@v5
+        uses: astral-sh/setup-uv@5a7eac68fb9809dea845d802897dc5c723910fa3  # v7.13
         with:
-          version: "0.5.13"
+          version: "0.9.17"
           python-version: 3.9
 
       - name: Configure Git
@@ -30,8 +30,7 @@ jobs:
 
       - name: Set Package Version
         run: |
-          # see https://github.com/astral-sh/uv/issues/6298#issuecomment-2335034247
-          uvx --from=toml-cli toml set --toml-path=pyproject.toml project.version ${GITHUB_REF#refs/*/}
+          uv version ${GITHUB_REF#refs/*/}
 
       - name: Build package
         run: |
@@ -39,13 +38,13 @@ jobs:
           uv run twine check --strict dist/*
 
       - name: Publish package
-        uses: pypa/gh-action-pypi-publish@release/v1
+        uses: pypa/gh-action-pypi-publish@ed0c53931b1dc9bd32cbe73a98c7f6766f8a527e  # release/v1.13.0
         with:
           user: __token__
           password: ${{ secrets.PYPI_TOKEN }}
 
       - name: Publish Github release
-        uses: softprops/action-gh-release@v2
+        uses: softprops/action-gh-release@a06a81a03ee405af7f2048a818ed3f03bbf83c7b  # v2.5.0
         with:
           files: dist/*
         env:
